--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.2",
-    "typescript": "^5.1.3"
+    "prettier": "^2.6.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
