--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,5 +99,6 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
 //    "declaration": true
   },
-  "include": ["src/**.*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["build"]
 }
