--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ts-toolbelt": "^9.6.0"
+  }
 }
