--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,26 @@
 {
   "compilerOptions": {
-    /* Core Options */
     "target": "ESNext",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "./src",
     "outDir": "./build",
-
-    /* Strict Type-Checking */
     "strict": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
-
-    /* Module Resolution */
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-
-    /* Decorators */
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-
-    /* Additional Features */
     "sourceMap": true,
     "declaration": true,
     "resolveJsonModule": true,
-
-    /* JavaScript Support */
     "allowJs": true,
     "checkJs": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.js"], // Include .js files
   "exclude": ["build", "node_modules"]
 }
