--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express": "^4.21.2",
+    "reflect-metadata": "^0.2.2",
     "ts-toolbelt": "^9.6.0",
     "vitest": "^2.1.8"
   }
