--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "rootDir": "./src",
     "outDir": "./build",
     "strict": true,
@@ -18,15 +18,14 @@
     "sourceMap": true,
     "declaration": true,
     "resolveJsonModule": true,
-    "allowJs": true,
-    "checkJs": true
+    "allowJs": true, // Enable JS support
+    "checkJs": true // Type-check JS files
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.js",
-    "src/advanced-ts/02 type-generics/06 challenges/.leep",
-    "src/advanced-ts/02 type-generics/04 advanced-generics/.keep",
-    "src/advanced-ts/02 type-generics/05 function-overloads/.keep"
-  ], // Include .js files
-  "exclude": ["build", "node_modules"]
+    "src/**/*"
+  ],
+  "exclude": [
+    "build",
+    "node_modules"
+  ]
 }
