--- a/joi-enhancer/package.json
+++ b/joi-enhancer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joi-enhancer",
+  "name": "@roninbyte/joi-enhancer",
   "version": "1.0.0",
   "description": "A production-grade TypeScript-first wrapper and enhancer for Joi validation library",
   "main": "dist/index.js",
@@ -22,8 +22,10 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "joi": "^17.0.0",
     "tslib": "^2.8.1"
+  },
+  "peerDependencies": {
+    "joi": "^17.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.0",
@@ -32,5 +34,9 @@
     "rollup": "^3.0.0",
     "typescript": "^5.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "private": true,
+  "publishConfig": {
+    "access": "restricted"
+  }
 }
