--- a/joi-enhancer/tsconfig.json
+++ b/joi-enhancer/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "rootDir": "./src",
     "outDir": "./build",
     "strict": true,
