feat: more features

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "joi": "^17.13.3",
     "joi-enhancer": "^1.0.0",
+    "joi-to-json-schema": "^5.1.0",
     "reflect-metadata": "^0.2.2",
     "ts-toolbelt": "^9.6.0",
     "vitest": "^2.1.8"
