--- a/joi-enhancer/package.json
+++ b/joi-enhancer/package.json
@@ -22,6 +22,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "joi-to-json-schema": "^5.1.0",
     "tslib": "^2.8.1"
   },
   "peerDependencies": {
@@ -31,9 +32,9 @@
     "@rollup/plugin-commonjs": "^23.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-typescript": "^9.0.0",
+    "joi-extract-type": "^15.0.2",
     "rollup": "^3.0.0",
-    "typescript": "^5.0.0",
-    "joi-extract-type": "^15.0.2"
+    "typescript": "^5.0.0"
   },
   "type": "module",
   "publishConfig": {
