--- a/joi-enhancer/package.json
+++ b/joi-enhancer/package.json
@@ -39,5 +39,9 @@
   "type": "module",
   "publishConfig": {
     "access": "public"
+  },
+  "exports": {
+    ".": "./dist/index.js",
+    "./advanced": "./dist/advanced.js"
   }
 }
