--- a/joi-enhancer/package.json
+++ b/joi-enhancer/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "rollup -c",
     "clean": "rm -rf dist",
-    "prepare": "npm run clean && npm run build"
+    "prepare": "npm run clean && npm run build",
+    "test": "vitest run"
   },
   "keywords": [
     "joi",
