--- a/joi-enhancer/package.json
+++ b/joi-enhancer/package.json
@@ -1,54 +1,61 @@
 {
   "name": "@roninbyte/joi-enhancer",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "A production-grade TypeScript-first wrapper and enhancer for Joi validation library",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./advanced": {
+      "import": "./dist/advanced.esm.js",
+      "require": "./dist/advanced.js",
+      "types": "./dist/advanced.d.ts"
+    }
+  },
+  "type": "module",
   "scripts": {
     "build": "rollup -c",
     "clean": "rm -rf dist",
     "prepare": "npm run clean && npm run build",
-    "test": "vitest run"
-  },
-  "keywords": [
-    "joi",
-    "typescript",
-    "validation",
-    "wrapper",
-    "enhancer"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
-  "dependencies": {
-    "joi-to-json-schema": "^5.1.0",
-    "tslib": "^2.8.1"
+    "test": "vitest run",
+    "lint": "eslint src/**/*.ts"
   },
   "peerDependencies": {
     "joi": "^17.0.0"
   },
+  "dependencies": {
+    "joi-extract-type": "^15.0.3",
+    "joi-to-json-schema": "^5.1.0"
+  },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.0",
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-typescript": "^9.0.0",
-    "joi-extract-type": "^15.0.2",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
+    "joi": "^17.13.3",
     "rollup": "^3.0.0",
-    "typescript": "^5.0.0"
+    "rollup-plugin-dts": "^5.0.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.7.4",
+    "vitest": "^2.0.0"
   },
-  "type": "module",
-  "publishConfig": {
-    "access": "public"
-  },
-  "exports": {
-    ".": {
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.js"
-    },
-    "./advanced": {
-      "import": "./dist/advanced.esm.js",
-      "require": "./dist/advanced.js"
-    }
-  }
+  "keywords": [
+    "joi",
+    "validation",
+    "typescript",
+    "schema"
+  ],
+  "license": "MIT"
 }
