--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "rollup": "^3.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,7 +26,7 @@
   "license": "ISC",
   "dependencies": {
     "joi": "^17.13.3",
-    "joi-enhancer": "^1.0.0",
+    "@roninbyte/joi-enhancer": "^1.0.4",
     "reflect-metadata": "^0.2.2",
     "ts-toolbelt": "^9.6.0",
     "vitest": "^2.1.8"
