--- a/downloader/package.json
+++ b/downloader/package.json
@@ -2,6 +2,7 @@
   "name": "downloader",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "try": "npx ts-node test.ts"
@@ -12,7 +13,12 @@
   "description": "",
   "dependencies": {
     "@roninbyte/joi-enhancer": "^1.0.6",
+    "@types/express": "^5.0.2",
+    "express": "^5.1.0",
     "joi": "^17.13.3"
   },
-  "type": "module"
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  }
 }
