--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.2",
     "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
@@ -25,8 +25,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "joi": "^17.13.3",
     "@roninbyte/joi-enhancer": "^1.0.4",
+    "express": "^5.1.0",
+    "joi": "^17.13.3",
     "reflect-metadata": "^0.2.2",
     "ts-toolbelt": "^9.6.0",
     "vitest": "^2.1.8"
