--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "outDir": "./dist",
     "sourceMap": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "useDefineForClassFields": false
   },
   "include": [
